# asuka

./: .gitattributes  .gitignore  ACF.sublime-syntax  Acf.tmPreferences  Asuka.sublime-color-scheme  Asuka.sublime-project  Asuka.sublime-syntax  Asuka.tmPreferences  CMakeLists.txt  GCC_BuildResults.sublime-syntax  GLSL.sublime-syntax  HLSL.sublime-syntax  Makefile  README.md  Rei.sublime-syntax  Win32_BuildResults.sublime-syntax  build.bat  build.sh  toggle-no-commit.bat
acf/: acf.hpp
common/: allocator.hpp  array.cpp  array.hpp  bitmap.hpp  bmp.cpp  bmp.hpp  byte.cpp  byte.hpp  code_location.cpp  code_location.hpp  crc.cpp  crc.hpp  defines.hpp  dynamic_array.hpp  format_png.cpp  format_png.hpp  index.hpp  math.hpp  memory_arena.hpp  obj.hpp  os.hpp  png.cpp  png.hpp  string.hpp  tprint.hpp  type.hpp  wav.cpp  wav.hpp
common/acf/: acf.hpp
common/debug/: casts.hpp
common/math/: color.cpp  color.hpp  complex.cpp  complex.hpp  float.cpp  float.hpp  integer.cpp  integer.hpp  matrix4.cpp  matrix4.hpp  rectangle.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vector4.cpp  vector4.hpp
common/memory/: arena_allocator.hpp  mallocator.hpp  pool_allocator.hpp
common/os/: file.cpp  file.hpp  memory.cpp  memory.hpp  net.cpp  net.hpp  time.cpp  time.hpp
common/os/linux/: file.cpp  file.hpp  memory.cpp  (+3 more)
d3d11/: d3d11.cpp
d3d12/: d3d12.cpp  shaders.hlsl
data/: config.acf  cube.mtl  monster.psd  prebuild_textures_to_cpp.bat
debugger/: debuggee.cpp  debuggee.s  debugger.cpp  linux_debugger.cpp
editor/: editor.cpp
misc/: alsa.md  find_static.bat  find_tags.bat  find_todo.bat  pre-commit  prepare_ubuntu.sh
neural/: neural.cpp
nocrt/: nocrt.hpp  win32_crt_float.cpp  win32_crt_math.cpp  win32_crt_memory.cpp  win32_nocrt.cpp
opengl/: opengl.cpp
preprocessor/: preprocessor.cpp
rei/: ast.hpp  main.cpp  parser.hpp  token.hpp  typecheck.hpp
son/: son.hpp
son2/: son.hpp
source_art/: cube.blend  cube_texture.psd  familiar.psd  wisp.blend
src/: asuka.cpp  asuka.hpp  entity.cpp  entity.hpp  linux_main.cpp  main.cpp  memory_arena.hpp  platform_linux.hpp  platform_win32.hpp  sim_region.cpp  sim_region.hpp  tilemap.cpp  tilemap.hpp  win32_main.cpp  world.cpp  world.hpp
src/ui/: ui.cpp  ui.hpp  ui_editor.cpp  ui_editor.hpp  ui_element.cpp  ui_element.hpp
tests/: main.cpp
tests/acf/: acf_tests.hpp
tools/: build_png_to_c.bat  png_to_c.cpp
web/: client.cpp  http.cpp  http.hpp  linux_server.cpp  parser_http.cpp  parser_http.hpp  server.cpp  user_controllers.cpp  user_controllers.hpp
xaudio2/: xaudio2_main.cpp
(+38 files in other folders)
